--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body {
     align-items: start;
     justify-content: flex-start;
     flex-direction: column;
+    
 
     
 
@@ -94,5 +95,43 @@ body {
     display: flex;
     justify-content: space-between;
     gap: 0;
+    cursor: pointer;
     
   }
+  .copy-alert {
+    position: fixed;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #fff;
+    color: black;
+    padding: 8px 16px;
+    border-radius: 8px;
+    font-size: 0.9rem;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    z-index: 9999;
+    opacity: 1;
+    transition: opacity 0.5s ease;
+  }
+
+  .copy-alert-1 {
+    position: fixed;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #fff;
+    color: black;
+    padding: 8px 16px;
+    border-radius: 8px;
+    font-size: 0.9rem;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    z-index: 9999;
+    opacity: 1;
+    transition: opacity 0.5s ease;
+  }
+  
+  
+  .copy-alert.fade-out {
+    opacity: 0;
+  }
+  
